--- a/source/popup.html
+++ b/source/popup.html
@@ -10,18 +10,13 @@
 <body>
 
   <section id="popup">
-    <h2>WEB-EXTENSION-STARTER</h2>
-    <button id="options__button">Options Page</button>
+    <h2>Profilehunt</h2>
+    <button id="options__button">Add this job</button>
     <div class="links__holder">
       <ul>
         <li>
           <button type="button" id="github__button">
-            GitHub
-          </button>
-        </li>
-        <li>
-          <button type="button" id="donate__button">
-            Buy Me A Coffee
+            Click to add
           </button>
         </li>
       </ul>
