--- a/source/popup.html
+++ b/source/popup.html
@@ -9,7 +9,7 @@
 
 <body>
 
-  <section id="popup">
+  <section id="popup" class="w-60">
     <h2>Profilehunt</h2>
     <button id="options__button">Add this job</button>
     <div class="links__holder">
