--- a/source/popup.html
+++ b/source/popup.html
@@ -7,21 +7,28 @@
   <title>Popup</title>
 </head>
 
-<body>
+<body class="">
+  <div class="px-4 py-5 sm:px-6 w-60 text-centre bg-gray-800  flex flex-col items-center">
+    <h3 class="text-2xl leading-6 font-semibold text-gray-900  text-centre text-white">
+      Profilehunt
+    </h3>
+    <div class="mt-4 hidden" id="spinner">
+      <svg class="animate-spin -ml-1 mr-3 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+        <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+        <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+      </svg>
 
-  <section id="popup" class="w-60">
-    <h2>Profilehunt</h2>
-    <button id="options__button">Add this job</button>
-    <div class="links__holder">
-      <ul>
-        <li>
-          <button type="button" id="github__button">
-            Click to add
-          </button>
-        </li>
-      </ul>
     </div>
-  </section>
+    
+    <div class="mt-20">
+
+      <button id="button" type="button" class="inline-flex items-center px-4 py-2 border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-red-600 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+        Add this job
+        <svg class="ml-3 -mr-1 h-5 w-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
+      </button>
+    </div>
+
+  </div>
 </body>
 
 </html>
