--- a/source/popup.html
+++ b/source/popup.html
@@ -23,7 +23,7 @@
 
     </div>
 
-    <div class="mt-20">
+    <div class="mt-4">
 
       <button id="button" type="button"
         class="inline-flex items-center px-4 py-2 border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-red-600 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
@@ -47,7 +47,7 @@
           </svg>
           Job search
         </button>
-      </a> 
+      </a>
       <a href="/kanban">
         <button type="button"
           class="inline-flex items-center px-3 py-2 text-sm font-medium leading-4 text-red-500 bg-white border border-red-300 rounded-md shadow-md hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
@@ -59,7 +59,7 @@
           </svg>
           Open Kanban
         </button>
-      </a> 
+      </a>
       <a href="/jobs/all_categories">
         <button type="button"
           class="inline-flex items-center px-3 py-2 text-sm font-medium leading-4 text-red-500 bg-white border border-red-300 rounded-md shadow-md hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
@@ -73,6 +73,31 @@
         </button>
       </a>
     </div>
+    <!-- This example requires Tailwind CSS v2.0+ -->
+    <span class="relative z-0 inline-flex shadow-sm rounded-md">
+      <a href="/job-application-tracker-web-extension">
+      <button type="button"
+        class="relative inline-flex items-center px-4 py-2 rounded-l-md border border-gray-300 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50 focus:z-10 focus:outline-none focus:ring-1 focus:ring-indigo-500 focus:border-indigo-500">
+        About<svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+        </svg>
+      </button>
+    </a>
+    <a href="/extension-help">
+      <button type="button"
+        class="-ml-px relative inline-flex items-center px-4 py-2 rounded-r-md border border-gray-300 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50 focus:z-10 focus:outline-none focus:ring-1 focus:ring-indigo-500 focus:border-indigo-500">
+        Help <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z">
+          </path>
+        </svg>
+      </button>
+    </a>
+    </span>
+
 
   </div>
 </body>
